can open/close sm form

--- a/app_public/src/app/m-details-content/m-details-content.component.html
+++ b/app_public/src/app/m-details-content/m-details-content.component.html
@@ -35,31 +35,28 @@
           <div class="col-12">
             <div class="card-primary review-card">
               <div class="card-block">
-                <a class="btn btn-primary float-right" (click)="formVisible = true">Add SM </a>
-                <div *ngIf="formVisible">
-                  <form (ngSubmit)="onSMSubmit()" method="post" role="form">
-                    <div *ngIf="formError" class="alert alert-danger" role="alert">
-                      {{formError}}
-                    </div>
-                    <div class="form-group row">
-                       <label class="col-10 col-sm-2 col-form-label" for="b1">b1</label>
-                       <div class="col-12 col-sm-5">
-                         <input [(ngModel)]="formM.b1" class="form-control" id="name" name="b1">
-                       </div>
-                    </div>
-                    <div class="form-group row">
-                       <label class="col-10 col-sm-2 col-form-label" for="b2">b2</label>
-                       <div class="col-12 col-sm-5">
-                         <input [(ngModel)]="formM.b2" class="form-control" id="name" name="b2">
-                       </div>
-                       <div class="col-sm-10">
-                         <button type="submit" class="btn btn-primary float-left">Create SM</button>
-                         <button type="button" (click)="formVisible = false" class="btn btn-primary float-left">Cancel</button>
-                       </div>
-                      </div>
-                    </form>
-                </div>
                 <h2 class="card-title">SMs </h2>
+                <div class="col-12">
+                  <small>
+                    <button (click)="displayForm=true" class="btn-primary float-right" >Add SM</button>
+                  </small>
+                </div>
+                <div *ngIf="displayForm" class="col-12 col-md-8">
+                  <form >
+                    <div class="form-group">
+                       <label for="b1">b1</label>
+                       <input class="form-control" id="b1" name="b1" type="text" placeholder="">
+                    </div> 
+                    <div class="form-group">
+                       <label for="b2">b2</label>
+                       <input class="form-control" id="b2" name="b2" type="text" placeholder="">
+                    </div> 
+                    <div class="form-group">
+                    </div>
+                    <button  type="submit" role="button" class="btn-primary">Add</button> 
+                    <button (click)="displayForm=false"  type="button" role="button" class="btn-primary">Cancel</button> 
+                  </form>     
+                </div>
                 <div *ngFor="let sm of dbM.sms | mostRecentFirst" class="row review">
                   <div class="col-12 no-gutters review-header">
                     <small class="reviewTimestamp"> {{sm.b3 | date : 'd MMMM yyyy HH:MM:SS'}} ----&gt;   </small>
