--- a/app_public/src/app/m-list/m-list.component.html
+++ b/app_public/src/app/m-list/m-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12">
     <small>
-      <button (click)="openForm=true" class="btn-primary float-right" >Add M </button>
+      <button (click)="openForm=true" class="btn-primary" >Add M </button>
     </small>
   </div>
   <div *ngIf="openForm" class="col-12 col-md-8">
