can't delete bcos of cors

--- a/app_public/src/app/m-details-content/m-details-content.component.html
+++ b/app_public/src/app/m-details-content/m-details-content.component.html
@@ -63,7 +63,7 @@
                   <div class="col-12 no-gutters review-header">
                     <small class="reviewTimestamp"> {{sm.b3 | date : 'd MMMM yyyy HH:MM:SS'}} ----&gt;   </small>
                     <small class="reviewTimestamp">{{sm.b2}}</small>
-                    <small> <a class="float-right" href="/ms/{{dbM._id}}/sms/{{sm._id}}/del">delete</a></small>
+                    <small> <a class="float-right" routerLink="/ms/{{dbM._id}}/sms/{{sm._id}}/del">delete</a></small>
                    </div>
                    <div class="col-12">
                       <p>{{sm.b1}}</p>
