nav bar reflective on login status

--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -8,6 +8,12 @@
         <li class="nav-item"><a routerLink="ms" routerLinkActive="active" class="nav-link" >Ms</a></li>
         <li class="nav-item"></li>
       </ul>
+      <ul class="navbar-nav navbar-right">
+        <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="register" *ngIf="!isLoggedIn()">register</a></li>
+        <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="login" *ngIf="!isLoggedIn()">login</a></li>
+        <li class="nav-item"><a routerLinkActive="active" class="nav-link" *ngIf="isLoggedIn()">{{getUserName()}}</a></li>
+        <li class="nav-item"><a class="nav-link btn" (click)="doLogout()" *ngIf="isLoggedIn()">logout</a></li>
+      </ul>
     </div>
   </div>
 </nav>
