added links in log in and register page

--- a/app_public/src/app/login-form/login-form.component.html
+++ b/app_public/src/app/login-form/login-form.component.html
@@ -1,3 +1,4 @@
+<p class="lead">Not yet a member? Please <a routerLink="/register">register</a> first.</p>
 <form (ngSubmit)="onLoginSubmit()" method="post" role="form">
   <div *ngIf="formError" class="alert alert-danger">
     {{formError}}
