can delete but can't remove immediately

--- a/app_public/src/app/m-list/m-list.component.html
+++ b/app_public/src/app/m-list/m-list.component.html
@@ -53,8 +53,7 @@
       <a *ngIf="isLoggedIn()" class="btn float-right" (click)="flagged(m._id)">delete</a>
       <div *ngIf="isFlagged(m._id)">
         <button (click)="setFlagOff(m._id)" class="btn btn-primary float-right">cancel</button>
-        <a routerLink="/ms/{{m._id}}/del"><button class="btn btn-primary float-right">are you sure?</button>
-        </a>
+        <button (click)="deleteM(m._id)" class="btn btn-primary float-right">are you sure?</button>
       </div>
     </small>
   </h4>
