--- a/app_public/src/app/m-details-content/m-details-content.component.html
+++ b/app_public/src/app/m-details-content/m-details-content.component.html
@@ -65,10 +65,10 @@
                     <small class="reviewTimestamp"> {{sm.b3 | date : 'd MMMM yyyy HH:MM:SS'}} ----&gt;   </small>
                     <small class="reviewTimestamp">{{sm.b2}} --------&gt;</small>
                     <small class="reviewTimestamp">{{sm.user}}</small>
-                    <a *ngIf="isLoggedIn()" class="btn float-right" (click)="flagged(m._id, sm._id)">delete</a>
-                    <div *ngIf="isFlagged(m._id, sm._id)">
-                      <button (click)="setFlagOff(m._id, sm._id)" class="btn btn-primary float-right">cancel</button>
-                      <button (click)="deleteSM(m._id, sm._id)" class="btn btn-primary float-right">are you sure?</button>
+                    <a *ngIf="isLoggedIn()" style="font-size: 0.8em" class="btn float-right" (click)="flagged(dbM._id, sm._id)">delete</a>
+                    <div *ngIf="isFlagged(dbM._id, sm._id)">
+                      <button style="font-size: 0.7em" (click)="setFlagOff(dbM._id, sm._id)" class="btn btn-primary float-right">cancel</button>
+                      <button style="font-size: 0.7em" (click)="deleteSM(dbM._id, sm._id)" class="btn btn-primary float-right">are you sure?</button>
                     </div>                    
                    </div>
                    <div class="col-12">
