--- a/app_public/src/app/m-list/m-list.component.html
+++ b/app_public/src/app/m-list/m-list.component.html
@@ -50,10 +50,10 @@
       <i class="fa{{m.a2 < 3 ? 'r':'s' }} fa-star"></i>
       <i class="fa{{m.a2 < 4 ? 'r':'s' }} fa-star"></i>
       <i class="fa{{m.a2 < 5 ? 'r':'s' }} fa-star"></i>
-      <a *ngIf="isLoggedIn()" class="btn float-right" (click)="flagged(m._id)">delete</a>
+      <a *ngIf="isLoggedIn()" style="font-size: 0.8em" class="btn float-right" (click)="flagged(m._id)">delete</a>
       <div *ngIf="isFlagged(m._id)">
-        <button (click)="setFlagOff(m._id)" class="btn btn-primary float-right">cancel</button>
-        <button (click)="deleteM(m._id)" class="btn btn-primary float-right">are you sure?</button>
+        <button style="font-size: 0.7em" (click)="setFlagOff(m._id)" class="btn btn-primary float-right">cancel</button>
+        <button style="font-size: 0.7em" (click)="deleteM(m._id)" class="btn btn-primary float-right">are you sure?</button>
       </div>
     </small>
   </h4>
