--- a/app_public/src/app/personals-page/personals-page.component.html
+++ b/app_public/src/app/personals-page/personals-page.component.html
@@ -1,5 +1,5 @@
 <app-page-header [content]="pageContent.header"></app-page-header>
 <div class="row">
-  <app-personals-list></app-personals-list>
-  <app-side-bar [content]="pageContent.sideBar"></app-side-bar>
+  <app-personals-list class="col-12 col-md-8" ></app-personals-list>
+  <app-side-bar class="col-12 col-md-4" [content]="pageContent.sideBar"></app-side-bar>
 </div>
