can associate personals with user

--- a/app_public/src/app/personals-details-content/personals-details-content.component.html
+++ b/app_public/src/app/personals-details-content/personals-details-content.component.html
@@ -8,15 +8,16 @@
        <i class="fas fa-star"> </i>
        <i class="far fa-star"> </i>
      </p>
-     <p>{{dbPers.name}}</p>
+     <p>Created by: {{dbPers.userId}}</p>
      <div class="card card-primary">
        <div class="card-block">
          <h2 class="card-title">Personal Info </h2>
-         <p class="card-text">{{dbPers.idNo}}</p>
-         <p class="card-text">{{dbPers.gender}}</p>
-         <p class="card-text">{{dbPers.nationality}}</p>
-         <p class="card-text">{{dbPers.maritalStatus}}</p>
-         <p class="card-text">{{dbPers.race}}</p>
+         <p class="card-text">Full Names: {{dbPers.name}}</p>
+         <p class="card-text">ID No: {{dbPers.idNo}}</p>
+         <p class="card-text">Gender: {{dbPers.gender}}</p>
+         <p class="card-text">Nationality: {{dbPers.nationality}}</p>
+         <p class="card-text">Marital Status: {{dbPers.maritalStatus}}</p>
+         <p class="card-text">Ethnicity: {{dbPers.race}}</p>
          </div>
      </div>
      <div class="card card-primary">
