--- a/app_public/src/app/personals-list/personals-list.component.html
+++ b/app_public/src/app/personals-list/personals-list.component.html
@@ -66,5 +66,5 @@
   <div class="facilities">
     <span *ngFor="let language of personal.languages" class="badge badge-warning">{{language}}</span>
   </div>
-  <small><span class="badge badge-pill badge-default float-right">{{personal.user}}</span></small>
+  <small><span class="badge badge-pill badge-default float-right">{{personal.userId}}</span></small>
 </div>
