--- a/app_public/src/app/personals-list/personals-list.component.html
+++ b/app_public/src/app/personals-list/personals-list.component.html
@@ -57,7 +57,7 @@
       <a *ngIf="isLoggedIn()" (click)="setFlag(personal._id)" style="font-size: 0.8em" class="btn float-right" >delete</a>
       <div *ngIf="isFlagged(personal._id)">
         <button (click)="setOffFlag(personal._id)" style="font-size: 0.7em"  class="btn btn-primary float-right">cancel</button>
-        <button (click)="deletePersonals()" style="font-size: 0.7em"  class="btn btn-primary float-right">are you sure?</button>
+        <button (click)="deletePersonals(personal._id)" style="font-size: 0.7em"  class="btn btn-primary float-right">are you sure?</button>
       </div>
     </small>
   </h4>
