--- a/app_public/src/app/edu-list-page/edu-list-page.component.html
+++ b/app_public/src/app/edu-list-page/edu-list-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  edu-list-page works!
-</p>
+<app-page-header [content]="pageContent.header"></app-page-header>
+<div class="row">
+  <app-edu-list-content class="col-12 col-md-8"></app-edu-list-content>
+  <app-side-bar [content]="pageContent.sideBar" class="col-12 col-md-4"></app-side-bar>
+</div>
