--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -6,6 +6,7 @@
     <div class="navbar-collapse collapse" id="navbarMain">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item"><a routerLink="personals" routerLinkActive="active" class="nav-link">Personal</a></li>
+        <li class="nav-item"><a routerLink="educations" routerLinkActive="active" class="nav-link">Education</a></li>
       </ul>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item"><a routerLinkActive="active" class="nav-link" routerLink="register" *ngIf="!isLoggedIn()">register</a></li>
