works api endpoints all tested

--- a/app_public/src/app/edu-list-content/edu-list-content.component.html
+++ b/app_public/src/app/edu-list-content/edu-list-content.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-12" >
     <small>
-      <button *ngIf="isLoggedIn()" class="btn-primary" (click)="openForm=true">add Personals </button>
-      <a *ngIf="!isLoggedIn()" routerLink="/login"><button class="btn-primary">log in to add Personal </button>
+      <button *ngIf="isLoggedIn()" class="btn-primary" (click)="openForm=true">add Education </button>
+      <a *ngIf="!isLoggedIn()" routerLink="/login"><button class="btn-primary">log in to add Education </button>
       </a>
     </small>
   </div>
