--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
         <li class="nav-item"><a routerLink="personals" routerLinkActive="active" class="nav-link">Personal</a></li>
         <li class="nav-item"><a routerLink="educations" routerLinkActive="active" class="nav-link">Education</a></li>
         <li class="nav-item"><a routerLink="works" routerLinkActive="active" class="nav-link">Work</a></li>
-        <li class="nav-item"><a routerLink="projecs" routerLinkActive="active" class="nav-link">Projects?</a></li>
+        <li class="nav-item"><a routerLink="projects" routerLinkActive="active" class="nav-link">Projects</a></li>
         <li class="nav-item"><a routerLink="contacts" routerLinkActive="active" class="nav-link">Contacts?</a></li>
       </ul>
       <ul class="navbar-nav navbar-right">
