--- a/app_public/src/app/project-list-page/project-list-page.component.html
+++ b/app_public/src/app/project-list-page/project-list-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  project-list-page works!
-</p>
+<app-page-header [content]="pageContent.header"></app-page-header>
+<div class="row">
+  <app-project-list-content class="col-12 col-md-8"></app-project-list-content>
+  <app-side-bar class="col-12 col-md-4" [content]="pageContent.sideBar"></app-side-bar>
+</div>
