starting to take shape

--- a/app_public/src/app/home-page/home-page.component.html
+++ b/app_public/src/app/home-page/home-page.component.html
@@ -1,5 +1,13 @@
 <app-page-header [content]="pageContent.header" ></app-page-header>
 <div class="row">
-  <app-home-content class="col-12 col-md-8"></app-home-content>
-  <app-side-bar [content]="pageContent.sideBar" class="col-12 col-md-4"></app-side-bar>
+  <div class="col-12 col-md-9">
+    <div class="row">
+      <app-home-content class="col-12 col-md-8"></app-home-content>
+      <div class="card card-primary card-block col-12 col-md-4">
+        <h2 class="card-title">Katlego</h2>
+        <img class="img-fluid roundedrounded" src="assets/images/katlego.jpg" alt="Ke Nna O">
+      </div>
+    </div>
+  </div>
+    <app-side-bar class="col-12 col-md-3" [content]="pageContent.sideBar"></app-side-bar>  
 </div>
