--- a/app_public/src/app/personals-details-content/personals-details-content.component.html
+++ b/app_public/src/app/personals-details-content/personals-details-content.component.html
@@ -79,8 +79,8 @@
     <div class="col-12 col-md-6 location-map">
       <div class="card card-primary">
         <div class="card-block">
-          <h2 class="card-title">Your Picture </h2>
-          <img src="" alt="person picture">
+          <h2 class="card-title">Katlego </h2>
+          <img src="/assets/images/katlego.jpg" width="330" height="420" alt="person picture">
         </div>
       </div>
     </div>
