--- a/app_public/src/app/home-content/home-content.component.html
+++ b/app_public/src/app/home-content/home-content.component.html
@@ -1,6 +1,6 @@
 <h4>
-  Welcome to ppApp!
+  Welcome to my Profile!
 </h4>
 <p>
-  The One App, that can Help...to put Pap on the table.
+  Hi, my name is Katlego! I’m a qualified Electrical Engineer with an extreme passion for developing applications that run on the web. The platforms I am most comfortable with are the Javascript-based MEAN stack of technologies and Microsoft’s ASP.NETCore framework. My specific area of interest is in the usage of web technologies in the automation of business processes. Some of the projects I’ve worked on include an automatic quotation and invoicing system, a personal profile application as well as a payroll application. To checkout my qualifications, work experience and contact details, navigate through my profile.
 </p>
