--- a/app_public/src/app/contact-list-content/contact-list-content.component.html
+++ b/app_public/src/app/contact-list-content/contact-list-content.component.html
@@ -43,7 +43,7 @@
 <div *ngFor="let contact of contacts" class="card">
    <div class="card-block"> 
    </div>
-   <h4> <a routerLink="/contacts/{{contact._id}}">{{contact.address}}</a>
+   <h4> <a routerLink="/contacts/{{contact._id}}">Contact Details</a>
     <small>&nbsp;
       <a *ngIf="isLoggedIn()" (click)="setFlag(contact._id)" style="font-size: 0.8em" class="btn float-right" >delete</a>
       <div *ngIf="isFlagged(contact._id)">
@@ -52,14 +52,15 @@
       </div>
     </small>
   </h4>
-  <p><b>Facebook: </b><span class="badge badge-pill badge-default">{{contact.facebook}}</span></p>
-  <p><b>Instagram: </b><span class="badge badge-pill badge-default">{{contact.instagram}}</span></p>
-  <p><b>Twitter: </b><span class="badge badge-pill badge-default">{{contact.twitter}}</span></p>  
+  <p><b>Address:     </b><span class="badge badge-pill badge-default">{{contact.address}}</span></p>
+  <p><b>Facebook:     </b><span class="badge badge-pill badge-default">{{contact.facebook}}</span></p>
+  <p><b>Instagram:    </b><span class="badge badge-pill badge-default">{{contact.instagram}}</span></p>
+  <p><b>Twitter:     </b><span class="badge badge-pill badge-default">{{contact.twitter}}</span></p>  
   <div class="facilities">
-    <p><b>Emails: </b><span *ngFor="let email of contact.emails" class="badge badge-warning">{{email}}</span></p>
+    <p><b>Emails:       </b><span *ngFor="let email of contact.emails" class="badge badge-warning">{{email}}</span></p>
   </div>
   <div class="facilities">
-    <p><b>Cell numbers: </b><span *ngFor="let cellphone of contact.cellphones" class="badge badge-warning">{{cellphone}}</span></p>
+    <p><b>Cell numbers:    </b><span *ngFor="let cellphone of contact.cellphones" class="badge badge-warning">{{cellphone}}</span></p>
   </div>
 
 </div>
