--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-light">
-  <div class="container"><a class="navbar-brand" routerLink="">About Katlego</a>
+  <div class="container"><a class="navbar-brand" routerLink="">About Me</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain">
       <span class="navbar-toggler-icon"></span>
     </button>
