added background and adjusted colors

--- a/app_public/src/app/footer/footer.component.html
+++ b/app_public/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="fixed-bottom">
    <div class="row">
      <div class="col-12">
        <small>© ppApp - Mightyrelo Software 2023</small>
