--- a/app_public/src/assets/stylesheets/style.css
+++ b/app_public/src/assets/stylesheets/style.css
@@ -97,7 +97,7 @@ h4 small {
   body {
   font-family: "Cabin", Arial, sans-serif;
   color: #fff;
-  background-image: url('../images/pexels-pixabay-355853.jpg');
+  background-image: url('../images/pexels-pixabay.jpg');
   background-attachment: fixed;
   }
 
